<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Duck Hunter</string>
    <string name="game_title">DUCK HUNTER</string>
    <string name="play_game">Play Game</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="score">Score: %1$d</string>
    <string name="lives">Lives: %1$d</string>
    <string name="ammo">Ammo: %1$d/%2$d</string>
    <string name="game_over">GAME OVER</string>
    <string name="final_score">Final Score: %1$d</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="god_mode">God Mode</string>
    <string name="paused">PAUSED</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="fps">FPS: %1$d</string>
    <string name="loading">Loading...</string>
    <string name="touch_to_start">Touch to Start Hunting!</string>
    <string name="drag_to_aim">Drag to Aim</string>
    <string name="tap_to_shoot">Tap to Shoot</string>
    <string name="double_tap_reload">Double Tap to Reload</string>
</resources>
